test_src/compiler_errors/types/arithmetic/MultiplyBoolError1.b
class MultiplyBoolError1 {
    void test() {
        println(true * 1);
    }
}
